# poke-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run_results.txt  team1.txt  team2.txt  team3.txt  team4.txt  team5.txt
docs/: architecture.md  implementation_plan.md  offensive_data_guide.md
poke_mcp/: __init__.py  server.py  web_server.py
poke_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
poke_mcp/analysis/: __init__.py  damage_calc.py  speed_tier.py  strategy_detector.py  team_analyzer.py
poke_mcp/clients/: __init__.py  pikalytics.py  pokeapi.py
poke_mcp/data/: meta_threats.py  type_chart.py
poke_mcp/llm/: __init__.py  gemini_client.py
poke_mcp/models/: __init__.py  team.py
poke_mcp/parsers/: __init__.py  smogon.py
poke_mcp/services/: analysis_pipeline.py
poke_mcp/vectorstore/: __init__.py  chroma_store.py
scripts/: mcp_client.py
static/: app.js  index.html  style.css
tests/: test_analysis_pipeline.py  test_parsers.py  test_pikalytics_client.py  test_team_analyzer.py  test_vectorstore.py
